@startuml
title Core — Class Diagram (Final State)

' ==========================================
' CONFIGURAÇÕES DE ESTILO (ASTAH UML LOOK)
' ==========================================
skinparam shadowing false
skinparam defaultFontName Arial
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60
skinparam padding 5

skinparam class {
    BackgroundColor #FFFFE0
    BorderColor #000000
    ArrowColor #000000
    AttributeFontColor #000000
    AttributeFontSize 12
    StereotypeFontColor #000000
}

skinparam package {
    BorderColor #000000
    BackgroundColor #FFFFFF
    FontStyle bold
}

skinparam interface {
    BackgroundColor #FFFFE0
    BorderColor #000000
}

skinparam enum {
    BackgroundColor #FFFFE0
    BorderColor #000000
}

' ==========================================
' PACOTES EXATOS DA IMAGEM
' ==========================================

package "Shared_Contracts_CQRS" {
    interface ICommand
    interface "ICommand<TResponse>" as ICommand_TResponse
    interface "ICommandHandler<TCommand>" as ICommandHandler_TCommand
    interface "ICommandHandler<TCommand, TResponse>" as ICommandHandler_TCommand_TResponse
    interface "IQuery<T>" as IQuery_T
    interface "IQueryHandler<TQuery, TResponse>" as IQueryHandler_TQuery_TResponse
}

package "Shared_Behaviors_Extensions" {
    class MediatRExtensions {
        {static} +AddMediatRWithAssemblies(IServiceCollection, Assembly[]) : IServiceCollection
    }
    class CarterExtensions {
        {static} +AddCarterWithAssemblies(IServiceCollection, Assembly[]) : IServiceCollection
    }
    class "ValidationBehavior<TRequest, TResponse>" as ValidationBehavior_TRequest_TResponse {
        -validators : IEnumerable<IValidator>
        +Handle(TRequest, next, ct) : Task<TResponse>
    }
    class "LoggingBehavior<TRequest, TResponse>" as LoggingBehavior_TRequest_TResponse {
        -logger : ILogger
        +Handle(TRequest, next, ct) : Task<TResponse>
    }
    class ResultExtensions {
        {static} +ToProblemResult<T>(Result<T>) : IResult
        {static} +ToProblemResult(Result) : IResult
        {static} +ToCreatedResult<T>(Result<T>, uri) : IResult
        {static} -ToProblemDetails(Error) : IResult
    }
    class DatabaseExtensions {
        {static} +UseMigrationAsync<TContext>(WebApplication) : Task<WebApplication>
    }
}

package "Shared_Data" {
    interface IDataSeeder {
        +SeedAllAsync() : Task
    }
    class DispatchDomainEventsInterceptor {
        -mediator : IMediator
        +SavingChanges() : InterceptionResult
        +SavingChangesAsync() : ValueTask
        -DispatchDomainEvents(DbContext) : Task
    }
    class AuditableEntityInterceptor <<internal>> {
        -httpContextAccessor : IHttpContextAccessor
        +SavingChanges() : InterceptionResult
        +SavingChangesAsync() : ValueTask
        -UpdateEntities(DbContext) : void
    }
    class Extensions {
        {static} +HasChangedOwnedEntities(EntityEntry) : bool
    }
}

package "Shared_Messaging" {
    class IntegrationEvent <<record>> {
        +EventId : Guid
        +OccuredOn : DateTime
        +EventType : string
    }
    class BasketCheckoutIntegrationEvent <<record>>
    class ProductPriceChangedIntegrationEvent <<record>>
    class MassTransitExtensions {
        {static} +AddMassTransitWithAssemblies(IServiceCollection, IConfiguration, Assembly[]) : IServiceCollection
    }
}

package "Shared_Contracts_Results" {
    class "Result<TValue>" as Result_T {
        +Value : TValue
        +implicit operator Result<TValue>(TValue)
    }
    class Result {
        +IsSuccess : bool
        +IsFailure : bool
        +Error : Error
        {static} +Success() : Result
        {static} +Failure(Error) : Result
        {static} +Success<TValue>(TValue) : Result<TValue>
        {static} +Failure<TValue>(Error) : Result<TValue>
    }
    class Error <<sealed record>> {
        +Code : string
        +Message : string
        +Type : ErrorType
        {static} +NotFound(code, message) : Error
        {static} +Validation(code, message) : Error
        {static} +BadRequest(code, message) : Error
        {static} +Conflict(code, message) : Error
        {static} +Forbidden(code, message) : Error
        {static} +Unexpected(code, message) : Error
        {static} -None : Error
    }
    enum ErrorType {
        None = 0
        NotFound = 404
        Validation = 400
        BadRequest = 400
        Conflict = 409
        Forbidden = 403
        Unexpected = 500
    }
}

package "Shared_Core_Utilities" {
    class CustomExceptionHandler {
        -logger : ILogger
        -localizer : IStringLocalizer<SharedMessages>
        +TryHandleAsync(HttpContext, Exception, ct) : ValueTask<bool>
    }
    class SharedMessages <<marker class>>
    class "PaginatedResult<TEntity>" as PaginatedResult_TEntity {
        +PageIndex : int
        +PageSize : int
        +Count : long
        +Data : IEnumerable<TEntity>
    }
}

package "Shared_DDD" {
    abstract class "Aggregate<TId>" as Aggregate_TId {
        -_domainEvents : List<IDomainEvent>
        +DomainEvents : IReadOnlyList<IDomainEvent>
        +AddDomainEvent(IDomainEvent) : void
        +ClearDomainEvents() : IDomainEvent[]
    }
    abstract class "Entity<T>" as Entity_T {
        +Id : T
        +CreatedAt : DateTime?
        +CreatedBy : string?
        +LastModified : DateTime?
        +LastModifiedBy : string?
    }
    interface IDomainEvent {
        +EventId : Guid
        +OccuredOn : DateTime
        +EventType : string
    }
    interface IAggregate {
        +DomainEvents : IReadOnlyList<IDomainEvent>
        +ClearDomainEvents() : IDomainEvent[]
    }
    interface "IAggregate<T>" as IAggregate_T
    interface "IEntity<T>" as IEntity_T {
        +Id : T
    }
    interface IEntity {
        +CreatedAt : DateTime?
        +CreatedBy : string?
        +LastModified : DateTime?
        +LastModifiedBy : string?
    }
}

package "External_Dependencies" {
    interface INotification
    interface IRequest
    interface IRequestHandler
    interface IPipelineBehavior
    interface IMediator
    abstract class SaveChangesInterceptor
    abstract class DbContext
    interface IValidator
    interface IExceptionHandler
    interface IHttpContextAccessor
    interface "IStringLocalizer<T>" as IStringLocalizer_T
}

' ==========================================
' RELATIONSHIPS (Com labels idênticas ao print)
' ==========================================

' Heranças do Core (Shared_DDD)
IEntity_T --|> IEntity : extends
IAggregate --|> IEntity : extends
IAggregate_T --|> IAggregate : extends
IAggregate_T --|> IEntity_T : extends
Entity_T ..|> IEntity_T : implements
Aggregate_TId --|> Entity_T : extends
Aggregate_TId ..|> IAggregate_T : implements
Aggregate_TId *-- IDomainEvent : _domainEvents 0..*

' Relacionamentos Results
Result_T --|> Result : extends
Error *-- ErrorType : has type
Result o-- Error : Error (on failure)

' Messaging
BasketCheckoutIntegrationEvent --|> IntegrationEvent : extends
ProductPriceChangedIntegrationEvent --|> IntegrationEvent : extends

' Interfaces Base e CQRS
IDomainEvent ..|> INotification : MediatR
ICommand --|> ICommand_TResponse : default TResponse=Result
ICommand_TResponse ..|> IRequest : MediatR
ICommandHandler_TCommand --|> ICommandHandler_TCommand_TResponse : default TResponse=Result
ICommandHandler_TCommand_TResponse ..|> IRequestHandler : MediatR
IQuery_T ..|> IRequest : MediatR
IQueryHandler_TQuery_TResponse ..|> IRequestHandler : MediatR

' Implementações de Behaviors
ValidationBehavior_TRequest_TResponse ..|> IPipelineBehavior : MediatR
LoggingBehavior_TRequest_TResponse ..|> IPipelineBehavior : MediatR
CustomExceptionHandler ..|> IExceptionHandler : ASP.NET Core
AuditableEntityInterceptor --|> SaveChangesInterceptor : EF Core
DispatchDomainEventsInterceptor --|> SaveChangesInterceptor : EF Core

' Dependências Transversais (Jumpers)
ResultExtensions ..> Result : converts to IResult
ResultExtensions ..> Result_T : converts to IResult
ResultExtensions ..> Error : maps to ProblemDetails

ValidationBehavior_TRequest_TResponse ..> ICommand_TResponse : constrains
ValidationBehavior_TRequest_TResponse ..> IValidator : validates
ValidationBehavior_TRequest_TResponse ..> Error : creates Error.Validation
ValidationBehavior_TRequest_TResponse ..> Result : returns

AuditableEntityInterceptor ..> IEntity : sets audit
AuditableEntityInterceptor ..> IHttpContextAccessor : gets user
DispatchDomainEventsInterceptor ..> IAggregate : collects
DispatchDomainEventsInterceptor ..> IMediator : publishes

CustomExceptionHandler ..> IStringLocalizer_T : i18n
CustomExceptionHandler ..> SharedMessages : locator

MediatRExtensions ..> ValidationBehavior_TRequest_TResponse : registers
MediatRExtensions ..> LoggingBehavior_TRequest_TResponse : registers

' DatabaseExtensions relationships
DatabaseExtensions ..> DbContext : migrates (TContext constraint)
DatabaseExtensions ..> IDataSeeder : seeds (optional)

' ==========================================
' ANCORAGEM INVISÍVEL PARA ESPALHAR HORIZONTALMENTE
' ==========================================
' Essa linha garante que as dependências externas fiquem na base
Shared_Contracts_CQRS -[hidden]down-> External_Dependencies
Shared_Behaviors_Extensions -[hidden]down-> External_Dependencies
Shared_Data -[hidden]down-> External_Dependencies
Shared_Contracts_Results -[hidden]down-> External_Dependencies
Shared_Core_Utilities -[hidden]down-> External_Dependencies
Shared_DDD -[hidden]down-> External_Dependencies

@enduml
